@@ -1,11 +1,16 @@
-# Java 11 and Java 17 demos
+# Java demos - new language features from Java 11 to Java 19
 
-This application helps showing some new features from Java 11 and Java 17.
+This application helps showing some new features being introduced in Java versions since Java 19.
 
-It is designed to run with Java JDK 17.
+Currently being re-designed and enhanced Java JDK 19.
 
 All relevant info is written down in comments inside sources.
 
-**Author:**
+## Usage
+Checkout and explore in your favorite IDE.
+
+You also can `mvn clean install` the project and then run `java --enable-preview -jar target\JavaDemos-2.0.jar`. But you may miss some important context and information. 
+
+## Author
 * alois.seckar@atos.net
 * http://alois-seckar.cz
